--- a/00-hola-mundo/src/App.css
+++ b/00-hola-mundo/src/App.css
@@ -34,8 +34,21 @@
     padding: 6px 16px;
     font-weight: bold;
     cursor: pointer;
+    transition: .3s ease background-color;
+}
+
+.tw-followCard-button.is-following {
+    border: 1px solid white;
+    color: white;
+    background-color: transparent;
 }
 
 .tw-followCard-button:hover {
-    background-color: rgba(18, 82, 230, 0.536);
+    background-color: rgb(201, 201, 201);
+}
+
+.tw-followCard-button.is-following:hover {
+    border: 1px solid red;
+    color: red;
+    background-color: rgba(255, 0, 0, 0.1);
 }
