--- a/00-hola-mundo/src/index.css
+++ b/00-hola-mundo/src/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #222;
+    background-color: rgb(30, 39, 50);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: grid;
     place-content: center;
