--- a/00-hola-mundo/src/App.css
+++ b/00-hola-mundo/src/App.css
@@ -41,14 +41,33 @@
     border: 1px solid white;
     color: white;
     background-color: transparent;
+    width: 140px;
 }
 
 .tw-followCard-button:hover {
     background-color: rgb(201, 201, 201);
 }
 
+.tw-followCard-text {
+    display: block;
+}
+
+.tw-followCard-stopFollow  {
+    display: none;
+}
+
 .tw-followCard-button.is-following:hover {
     border: 1px solid red;
     color: red;
     background-color: rgba(255, 0, 0, 0.1);
+    
+    transition: 2 ease all;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-text {
+    display: none;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-stopFollow {
+    display: block;
 }
